--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
 image: docker:19.03.12
 
-variables:
+variables:  
   DOCKER_HOST: tcp://docker:2375
+  DOCKER_TLS_CERTDIR: ""
 services:
   - docker:19.03.12-dind
 
